优化项目maven结构

--- a/template-core/pom.xml
+++ b/template-core/pom.xml
@@ -56,4 +56,13 @@
 
     </dependencies>
 
+    <build>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+            </extension>
+        </extensions>
+    </build>
+
 </project>
